--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 *.css linguist-detectable=false
-*.less linguist-detectable=true
-*.cljs linguist-detectable=true
-*.clj linguist-detectable=true
+*.less linguist-language=Less
+*.cljs linguist-language=ClojureScript
+*.clj linguist-language=Clojure
